Revamp native-image build tooling, fix UTF-8 encoding issue.